--- a/Css/style.css
+++ b/Css/style.css
@@ -171,7 +171,7 @@ marquee {
     position: relative;
     /*width: 1520px;*/
     height: 480px;
-    background-image: url('img/new.jpg');
+    background-image: url('../img/new.jpg');
     background-size: cover;
     border: 2px solid rgb(178, 175, 175);
     background-repeat: no-repeat;
