added a login page and hyperlinks to other pages

--- a/Css/contactform.css
+++ b/Css/contactform.css
@@ -96,7 +96,7 @@ padding-top: 20px;
 
 a {
     text-decoration: none;
-    color: black;
+    color: rgb(233, 31, 31);
     /* padding: 18px ; */
 }
 
