--- a/Css/style.css
+++ b/Css/style.css
@@ -349,48 +349,7 @@ img {
     transform: scale(1.1, 1.1);
     
 }
-.footer{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:space-around;
-    padding: 20px;
-    color: aliceblue;
-    background-color: black;
-    
 
-}
-.address{
-    width: 60%;
-    /* padding-left: 10px; */
-    /* background-color: rgb(182, 182, 194); */
-}
-.imgl{
-    width: 200px;
-
-    background: white;
-}
-.menu{
-    
-    width: 20%;
-    /* background-color: rgb(119, 119, 122); */
-}
-.menu1{
-}
-.account{
-    width: 20%;
-    /* background-color: blue; */
-}
-.acc1{
-
-}
-.footer1{
-    width: 100%;
-    height: 50px;
-    background-color: black;
-    text-align: center;
-    padding-top: 14px;
-}
 .smedias{
     font-size: 30px;
     width: 100%;
@@ -438,3 +397,57 @@ img {
     margin-top: 12px;
     padding: 0px;
   }
+
+
+/* Footer styles */
+
+.footer{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-around;
+    padding: 20px 30px;
+    color: aliceblue;
+    background-color: black;
+}
+.footer-secondary {
+    width: 40%;
+    display: flex;
+}
+.address{
+    width: 50%;
+    /* padding-left: 10px; */
+    /* background-color: rgb(182, 182, 194); */
+}
+.imgl{
+    width: 200px;
+    background: white;
+}
+.menu{
+    width: 50%;
+    /* background-color: rgb(119, 119, 122); */
+}
+.account{
+    width: 20%;
+    /* background-color: blue; */
+}
+.footer1{
+    width: 100%;
+    height: 50px;
+    background-color: black;
+    text-align: center;
+    padding-top: 14px;
+}
+
+@media only screen and (max-width: 600px)  {
+    .footer{
+        flex-direction: column-reverse;
+    }
+    .footer-secondary, .address {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .footer-secondary {
+        margin-bottom: 40px;
+    }
+}
