--- a/Css/contactform.css
+++ b/Css/contactform.css
@@ -143,58 +143,7 @@ a:hover {
      font-weight: bold;
 
 }
-.footer{
-    width: 100%;
-    height: 400px;
-    display: flex;
-    color: aliceblue;
-    background-color: black;
-    
 
-}
-.address{
-    width: 350px;
-    height: 300px;
-    margin-left: 180px;
-    /* padding-left: 10px; */
-    /* background-color: rgb(182, 182, 194); */
-}
-.imgl{
-    width: 200px;
-    margin-left: 20px;
-    margin-top: 20px;
-    background: white;
-}
-.menu{
-    
-    width: 150px;
-    height: 300px;
-    /* background-color: rgb(119, 119, 122); */
-    margin-left: 50px;
-}
-.menu1{
-    margin-top: 40px;
-    margin-left: 120px;
-
-}
-.account{
-    width: 150px;
-    height: 300px;
-    /* background-color: blue; */
-    margin-left: 50px;
-}
-.acc1{
-    margin-top: 40px;
-    margin-left: 180px;
-
-}
-.footer1{
-    width: 100%;
-    height: 50px;
-    background-color: black;
-    text-align: center;
-    padding-top: 14px;
-}
 .smedias{
     font-size: 30px;
 }
@@ -205,3 +154,55 @@ a:hover {
     color: aqua;
 }
 
+/* Footer styles */
+
+.footer{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-around;
+    padding: 20px 30px;
+    color: aliceblue;
+    background-color: black;
+}
+.footer-secondary {
+    width: 40%;
+    display: flex;
+}
+.address{
+    width: 50%;
+    /* padding-left: 10px; */
+    /* background-color: rgb(182, 182, 194); */
+}
+.imgl{
+    width: 200px;
+    background: white;
+}
+.menu{
+    width: 50%;
+    /* background-color: rgb(119, 119, 122); */
+}
+.account{
+    width: 20%;
+    /* background-color: blue; */
+}
+.footer1{
+    width: 100%;
+    height: 50px;
+    background-color: black;
+    text-align: center;
+    padding-top: 14px;
+}
+
+@media only screen and (max-width: 600px)  {
+    .footer{
+        flex-direction: column-reverse;
+    }
+    .footer-secondary, .address {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .footer-secondary {
+        margin-bottom: 40px;
+    }
+}
