--- a/Css/contactform.css
+++ b/Css/contactform.css
@@ -91,7 +91,7 @@ padding-top: 20px;
     position: sticky;
      top: 0%; 
      z-index: 999;
-    box-shadow: 2px 3px 5px rgb(18, 18, 18); 
+     box-shadow: 0px 4px 6px rgb(0, 0, 0.1); 
  } 
 
 a {
@@ -193,7 +193,15 @@ a:hover {
     text-align: center;
     padding-top: 14px;
 }
-
+.menu1 a{
+    color: white;
+}
+.acc1 a{
+    color: white;
+}
+.acc1 a:hover{
+    color: white;
+}
 @media only screen and (max-width: 600px)  {
     .footer{
         flex-direction: column-reverse;
