--- a/Css/product.css
+++ b/Css/product.css
@@ -29,7 +29,7 @@
     position: sticky;
      top: 0%; 
      z-index: 999;
-    box-shadow: 2px 3px 5px  rgb(18, 18, 18); 
+     box-shadow: 0px 4px 6px rgb(0, 0, 0.1); 
  } 
  a{
    text-decoration: none; 
@@ -322,7 +322,15 @@ color: red;
     text-align: center;
     padding-top: 14px;
 }
-
+.menu1 a{
+    color: white;
+}
+.acc1 a{
+    color: white;
+}
+.acc1 a:hover{
+    color: white;
+}
 @media only screen and (max-width: 600px)  {
     .footer{
         flex-direction: column-reverse;
