--- a/Css/style.css
+++ b/Css/style.css
@@ -30,7 +30,7 @@
     position: sticky;
      top: 0%; 
      z-index: 999;
-    box-shadow: 5px 6px 10px rgb(18, 18, 18); 
+    box-shadow: 0px 4px 6px rgb(0, 0, 0.1); 
  } 
 
 a {
@@ -352,7 +352,7 @@ img {
 
 .smedias{
     font-size: 30px;
-    width: 100%;
+    width: 40%;
     display: flex;
     justify-content: space-around;
 }
@@ -438,7 +438,15 @@ img {
     text-align: center;
     padding-top: 14px;
 }
-
+.menu1 a{
+    color: white;
+}
+.acc1 a{
+    color: white;
+}
+.acc1 a:hover{
+    color: white;
+}
 @media only screen and (max-width: 600px)  {
     .footer{
         flex-direction: column-reverse;
