--- a/Css/about.css
+++ b/Css/about.css
@@ -10,8 +10,8 @@
     position: sticky;
      top: 0%; 
      z-index: 999;
-    box-shadow: 5px 6px 10px rgb(18, 18, 18); 
- } 
+    box-shadow: 2px 3px 5px  rgb(18, 18, 18); 
+ }  
 
 a {
     text-decoration: none;
@@ -23,7 +23,7 @@ a {
 ul,
 li {
     display: inline;
-    padding: 25px;
+    padding: 20px;
 }
 
 button {
@@ -57,13 +57,18 @@ button {
     padding: 3px 40px;
     border-radius: 5px;
     border: none;
-    width: 350px;
+    width: 300px;
     height: 30px;
+    border-radius: 5px;
     box-shadow: 2px 3px;
-     box-shadow: 7px 7px 7px grey;
-     border-radius: 5px;
-    
+    box-shadow: 7px 7px 7px grey;
+    margin-right:-4px;
 }
+
+.search_bar{
+    margin-left:20px;
+}
+
 .why {
     background-color: lightgrey;
     width: 100%;
