--- a/Css/style.css
+++ b/Css/style.css
@@ -1,8 +1,8 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 #myBtn {
   display: none; /* Hidden by default */
@@ -25,437 +25,419 @@
 }
 
 .nav {
-    background-color:aliceblue;
-    padding: 15px 12px;
-    position: sticky;
-     top: 0%; 
-     z-index: 999;
-    box-shadow: 0px 4px 6px rgb(0, 0, 0.1); 
- } 
-
-a {
-    text-decoration: none;
-    color: rgb(234, 37, 37);
-    /* padding: 18px ; */
+  background-color: aliceblue;
+  padding: 15px 12px;
+  position: sticky;
+  top: 0%;
+  z-index: 999;
+  box-shadow: 0px 4px 6px rgb(0, 0, 0.1);
 }
 
+a {
+  text-decoration: none;
+  color: rgb(234, 37, 37);
+  /* padding: 18px ; */
+}
 
 ul,
 li {
-    display: inline;
-    padding: 25px;
+  display: inline;
+  padding: 25px;
 }
 
 button {
-    float: right;
-}  
+  float: right;
+}
 
- a.ac{
-    background-color: blue;
-    color: beige;
-    padding: 18px;
-    border-top-right-radius: 6px;
-    border-bottom-left-radius: 6px;
-    
+.nav-options {
+  display: inline;
+  margin-left: -50px;
+}
+.nav-options a {
+  color: black;
+}
+a.ac {
+  background-color: blue;
+  color: beige;
+  padding: 18px;
+  border-top-right-radius: 6px;
+  border-bottom-left-radius: 6px;
 }
 
 a:hover {
-    /* background-color: blue; */
-    color:red;
-    font-weight: bold;
-    /* padding: 19px; */
-    /* color: aliceblue; */
-
+  /* background-color: blue; */
+  color: red;
+  font-weight: bold;
+  /* padding: 19px; */
+  /* color: aliceblue; */
 }
 button {
-    float: right;
-    
+  float: right;
 }
 
-
-.inp{
-    padding: 3px 40px;
-    border-radius: 5px;
-    border: none;
-    width: 350px;
-    height: 30px;
-    box-shadow: 2px 3px;
-     box-shadow: 7px 7px 7px grey;
-     border-radius: 5px;
-    
+.inp {
+  padding: 3px 40px;
+  border-radius: 5px;
+  border: none;
+  width: 350px;
+  height: 30px;
+  box-shadow: 2px 3px;
+  box-shadow: 7px 7px 7px grey;
+  border-radius: 5px;
 }
 
 .pic {
-    position: relative;
-    /*width: 1520px;*/
-    height: 580px;
-    background-image: url('../img/pic.jpg');
-    background-size: cover;
-    border: 2px solid rgb(178, 175, 175);
-    background-repeat: no-repeat;
-    /* position: fixed; */
-
+  position: relative;
+  /*width: 1520px;*/
+  height: 580px;
+  background-image: url("../img/pic.jpg");
+  background-size: cover;
+  border: 2px solid rgb(178, 175, 175);
+  background-repeat: no-repeat;
+  /* position: fixed; */
 }
 
 .shop {
-    width: 110px;
-    height: 40px;
-    background-color: aqua;
-    color: aliceblue;
-    text-align: center;
-    margin-top: 2px;
-    font-size: 20px;
-    border-radius: 15px;
-    padding-top: 8px;
-
+  width: 110px;
+  height: 40px;
+  background-color: aqua;
+  color: aliceblue;
+  text-align: center;
+  margin-top: 2px;
+  font-size: 20px;
+  border-radius: 15px;
+  padding-top: 8px;
 }
 
 .ale {
-    width: 500px;
-    height: 500px;
-    margin-left: 200px;
-    margin-top: 180px;
-    
+  width: 500px;
+  height: 500px;
+  margin-left: 200px;
+  margin-top: 180px;
 }
 
 marquee {
-    position: fixed;
+  position: fixed;
 }
 
 .mot {
-    background-color: rgb(242, 14, 14);
-    width: 120px;
-    height: 5px;
-    margin-left: 750px;
+  background-color: rgb(242, 14, 14);
+  width: 120px;
+  height: 5px;
+  margin-left: 750px;
 }
 
 .why {
-    background-color: lightgrey;
-    width: 100%;
-    height: 180px;
-    /* display: inline-flex; */
-    padding: 10px;
-    margin-bottom: 15px;
-
+  background-color: lightgrey;
+  width: 100%;
+  height: 180px;
+  /* display: inline-flex; */
+  padding: 10px;
+  margin-bottom: 15px;
 }
 
 .free {
-    background-color: rgb(13, 32, 89);
-    width: 200px;
-    height: 150px;
-    color: aliceblue;
-    border-bottom-left-radius: 12px;
-    border-top-right-radius: 12px;
-    padding-left: 8px;
-    position: relative;
-    bottom: 60px;
-    box-shadow: 10px 10px 10px red;
-
+  background-color: rgb(13, 32, 89);
+  width: 200px;
+  height: 150px;
+  color: aliceblue;
+  border-bottom-left-radius: 12px;
+  border-top-right-radius: 12px;
+  padding-left: 8px;
+  position: relative;
+  bottom: 60px;
+  box-shadow: 10px 10px 10px red;
 }
 
 .Fast {
-    background-color: rgb(18, 37, 88);
-    width: 200px;
-    height: 150px;
-    color: aliceblue;
-    border-bottom-left-radius: 12px;
-    border-top-right-radius: 12px;
-    padding-left: 8px;
-    position: relative;
-    bottom: 60px;
-     box-shadow: 10px 10px 10px red;
-
+  background-color: rgb(18, 37, 88);
+  width: 200px;
+  height: 150px;
+  color: aliceblue;
+  border-bottom-left-radius: 12px;
+  border-top-right-radius: 12px;
+  padding-left: 8px;
+  position: relative;
+  bottom: 60px;
+  box-shadow: 10px 10px 10px red;
 }
 
 .Best {
-    background-color: rgb(22, 39, 93);
-    width: 200px;
-    height: 150px;
-    position: relative;
-    bottom: 60px;
-    color: aliceblue;
-    border-bottom-left-radius: 12px;
-    border-top-right-radius: 12px;
-    padding-left: 8px;
-     box-shadow: 10px 10px 10px red;
-
+  background-color: rgb(22, 39, 93);
+  width: 200px;
+  height: 150px;
+  position: relative;
+  bottom: 60px;
+  color: aliceblue;
+  border-bottom-left-radius: 12px;
+  border-top-right-radius: 12px;
+  padding-left: 8px;
+  box-shadow: 10px 10px 10px red;
 }
 
 .psd {
-    margin-left: 250px;
-    display: flex;
-
+  margin-left: 250px;
+  display: flex;
 }
 
 .boy {
-    position: relative;
-    /*width: 1520px;*/
-    height: 480px;
-    background-image: url('../img/new.jpg');
-    background-size: cover;
-    border: 2px solid rgb(178, 175, 175);
-    background-repeat: no-repeat;
-
+  position: relative;
+  /*width: 1520px;*/
+  height: 480px;
+  background-image: url("../img/new.jpg");
+  background-size: cover;
+  border: 2px solid rgb(178, 175, 175);
+  background-repeat: no-repeat;
 }
 
 .new {
-    width: 502px;
-    height: 500px;
-    margin-left: 800px;
-    margin-top: 180px;
-
+  width: 502px;
+  height: 500px;
+  margin-left: 800px;
+  margin-top: 180px;
 }
 
 .now {
-    width: 110px;
-    height: 40px;
-    background-color: aqua;
-    /*color: white;*/
-    text-align: center;
-    margin-top: 2px;
-    font-size: 20px;
-    border-radius: 15px;
-    padding-top: 8px;
-
+  width: 110px;
+  height: 40px;
+  background-color: aqua;
+  /*color: white;*/
+  text-align: center;
+  margin-top: 2px;
+  font-size: 20px;
+  border-radius: 15px;
+  padding-top: 8px;
 }
 
 .tom {
-    background-color: rgb(242, 14, 14);
-    width: 120px;
-    height: 5px;
-    margin-left: 675px;
+  background-color: rgb(242, 14, 14);
+  width: 120px;
+  height: 5px;
+  margin-left: 675px;
 }
 
 .main {
-    height: 550px;
-    background-color: rgb(240, 228, 228);
-    width: 400px;
-    /* border: solid; */
-    margin: 50px;
-    padding-left: 55px;
-    float: left;
-    box-shadow: 4px 5px 10px  15PX rgb(231, 207, 207);
-
+  height: 550px;
+  background-color: rgb(240, 228, 228);
+  width: 400px;
+  /* border: solid; */
+  margin: 50px;
+  padding-left: 55px;
+  float: left;
+  box-shadow: 4px 5px 10px 15px rgb(231, 207, 207);
 }
 
 .x {
-    height: 400px;
-    width: 350px;
-    /* border: solid; */
-    margin: 50px 50px;
-    float: left;
-    position: relative;
-    bottom: 50px;
-    right: 50px;
+  height: 400px;
+  width: 350px;
+  /* border: solid; */
+  margin: 50px 50px;
+  float: left;
+  position: relative;
+  bottom: 50px;
+  right: 50px;
 }
 
 x,
 img {
-    text-align: center;
-    position: relative;
-    /*width: 300px*/
+  text-align: center;
+  position: relative;
+  /*width: 300px*/
 }
 
 .y {
-    height: 100px;
-    width: 350px;
-    /* border: solid; */
-    margin: 50px 50px;
-    float: left;
-    position: relative;
-    bottom: 150px;
-    right: 50px;
+  height: 100px;
+  width: 350px;
+  /* border: solid; */
+  margin: 50px 50px;
+  float: left;
+  position: relative;
+  bottom: 150px;
+  right: 50px;
 }
 
 .price {
-    display: inline;
-    padding-left: 20px;
+  display: inline;
+  padding-left: 20px;
 }
 
 #overflow {
-    font-size: 40px;
-
+  font-size: 40px;
 }
 
 .buy {
-    position: relative;
-    top: 3px;
-    /*left: 12px;*/
-    right: 45px;
-    font-weight: bold;
-    /*border: 3px solid black;*/
-     box-shadow: 7px 7px 7px grey;
-     border-radius: 5px;
-    font-size: 20px;
-    border: none;
-    width: 300px;
-    background-color: aqua;
-    
-    position: relative;
+  position: relative;
+  top: 3px;
+  /*left: 12px;*/
+  right: 45px;
+  font-weight: bold;
+  /*border: 3px solid black;*/
+  box-shadow: 7px 7px 7px grey;
+  border-radius: 5px;
+  font-size: 20px;
+  border: none;
+  width: 300px;
+  background-color: aqua;
 
+  position: relative;
 }
-.cart{
-     position: relative;
-    top: 15px;
-    /*left: 12px;*/
-    right: 45px;
-    font-weight: bold;
-    /*border: 3px solid black;*/
-     box-shadow: 7px 7px 7px grey;
-     border-radius: 5px;
-    font-size: 20px;
-    border: none;
-    width: 300px;
-    background-color: aqua;
-    
-    position: relative;
+.cart {
+  position: relative;
+  top: 15px;
+  /*left: 12px;*/
+  right: 45px;
+  font-weight: bold;
+  /*border: 3px solid black;*/
+  box-shadow: 7px 7px 7px grey;
+  border-radius: 5px;
+  font-size: 20px;
+  border: none;
+  width: 300px;
+  background-color: aqua;
 
+  position: relative;
 }
 
 .last {
-    background-color: rgb(24, 23, 23);
-    width: 1520px;
-    height: 50px;
-    position: absolute;
-    /* margin-top: 2000px; */
-    color: aliceblue;
-    text-align: center;
-    padding-top: 20px;
-
+  background-color: rgb(24, 23, 23);
+  width: 1520px;
+  height: 50px;
+  position: absolute;
+  /* margin-top: 2000px; */
+  color: aliceblue;
+  text-align: center;
+  padding-top: 20px;
 }
-.view{
-    background-color: black;
-    width: 400px;
-    height: 60px;
-    /*position: relative;*/
-    /*top: 50px;  */
-    text-align: center;
-    padding-top: 15px;
-    font-size: 24px;
-    border-radius: 200px;
-    margin-left: 550px;
-     box-shadow: 7px 7px 7px grey   ;
-   
+.view {
+  background-color: black;
+  width: 400px;
+  height: 60px;
+  /*position: relative;*/
+  /*top: 50px;  */
+  text-align: center;
+  padding-top: 15px;
+  font-size: 24px;
+  border-radius: 200px;
+  margin-left: 550px;
+  box-shadow: 7px 7px 7px grey;
 }
 
-
-.main1{
-    width: 100%;
-    height: 1800px;
-    background-color: white;
+.main1 {
+  width: 100%;
+  height: 1800px;
+  background-color: white;
 }
 .iii:hover {
-    display: inline-block;
-    transform: scale(1.1, 1.1);
-    
+  display: inline-block;
+  transform: scale(1.1, 1.1);
 }
 
-.smedias{
-    font-size: 30px;
-    width: 40%;
-    display: flex;
-    justify-content: space-around;
+.smedias {
+  font-size: 30px;
+  width: 40%;
+  display: flex;
+  justify-content: space-around;
 }
-.blaa{
-    color: aliceblue;
+.blaa {
+  color: aliceblue;
 }
-.blaa:hover{
-    color: aqua;
+.blaa:hover {
+  color: aqua;
 }
 
 #tc {
-    text-align: center;
-    letter-spacing: 2px;
-    font-size: 1.5rem;
-  }
+  text-align: center;
+  letter-spacing: 2px;
+  font-size: 1.5rem;
+}
 
-  .categoryBox {
-    width: 98%;
-    margin-left: 30px;
-    margin-top: 20px;
-  }
+.categoryBox {
+  width: 98%;
+  margin-left: 30px;
+  margin-top: 20px;
+}
 
-  .categoryBox img {
-    width: 16%;
-    padding: 0px;
-  }
+.categoryBox img {
+  width: 16%;
+  padding: 0px;
+}
 
-  #thtbm {
-    text-align: center;
-    letter-spacing: 2px;
-    font-size: 1.5rem;
-  }
+#thtbm {
+  text-align: center;
+  letter-spacing: 2px;
+  font-size: 1.5rem;
+}
 
-  .thtbm {
-    width: 97%;
-    margin-left: 35px;
-  }
+.thtbm {
+  width: 97%;
+  margin-left: 35px;
+}
 
-  .thtbm img {
-    width: 48%;
-    margin-left: 12px;
-    margin-top: 12px;
-    padding: 0px;
-  }
-
+.thtbm img {
+  width: 48%;
+  margin-left: 12px;
+  margin-top: 12px;
+  padding: 0px;
+}
 
 /* Footer styles */
 
-.footer{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:space-around;
-    padding: 20px 30px;
-    color: aliceblue;
-    background-color: black;
+.footer {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 20px 30px;
+  color: aliceblue;
+  background-color: black;
 }
 .footer-secondary {
-    width: 40%;
-    display: flex;
+  width: 40%;
+  display: flex;
 }
-.address{
-    width: 50%;
-    /* padding-left: 10px; */
-    /* background-color: rgb(182, 182, 194); */
+.address {
+  width: 50%;
+  /* padding-left: 10px; */
+  /* background-color: rgb(182, 182, 194); */
 }
-.imgl{
-    width: 200px;
-    background: white;
+.imgl {
+  width: 200px;
+  background: white;
 }
-.menu{
-    width: 50%;
-    /* background-color: rgb(119, 119, 122); */
+.menu {
+  width: 50%;
+  /* background-color: rgb(119, 119, 122); */
 }
-.account{
-    width: 20%;
-    /* background-color: blue; */
+.account {
+  width: 20%;
+  /* background-color: blue; */
 }
-.footer1{
+.footer1 {
+  width: 100%;
+  height: 50px;
+  background-color: black;
+  text-align: center;
+  padding-top: 14px;
+}
+.menu1 a {
+  color: white;
+}
+.acc1 a {
+  color: white;
+}
+.acc1 a:hover {
+  color: white;
+}
+@media only screen and (max-width: 600px) {
+  .footer {
+    flex-direction: column-reverse;
+  }
+  .footer-secondary,
+  .address {
     width: 100%;
-    height: 50px;
-    background-color: black;
-    text-align: center;
-    padding-top: 14px;
-}
-.menu1 a{
-    color: white;
-}
-.acc1 a{
-    color: white;
-}
-.acc1 a:hover{
-    color: white;
-}
-@media only screen and (max-width: 600px)  {
-    .footer{
-        flex-direction: column-reverse;
-    }
-    .footer-secondary, .address {
-        width: 100%;
-        margin-bottom: 20px;
-    }
-    .footer-secondary {
-        margin-bottom: 40px;
-    }
+    margin-bottom: 20px;
+  }
+  .footer-secondary {
+    margin-bottom: 40px;
+  }
 }
