--- a/Css/style.css
+++ b/Css/style.css
@@ -4,24 +4,39 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+
 #myBtn {
-  display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: red; /* Set a background color */
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 10px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Fixed/sticky position */
+  bottom: 20px;
+  /* Place the button at the bottom of the page */
+  right: 30px;
+  /* Place the button 30px from the right */
+  z-index: 99;
+  /* Make sure it does not overlap */
+  border: none;
+  /* Remove borders */
+  outline: none;
+  /* Remove outline */
+  background-color: red;
+  /* Set a background color */
+  color: white;
+  /* Text color */
+  cursor: pointer;
+  /* Add a mouse pointer on hover */
+  padding: 15px;
+  /* Some padding */
+  border-radius: 10px;
+  /* Rounded corners */
+  font-size: 18px;
+  /* Increase font size */
 }
 
 #myBtn:hover {
-  background-color: #555; /* Add a dark-grey background on hover */
+  background-color: #555;
+  /* Add a dark-grey background on hover */
 }
 
 .nav {
@@ -53,9 +68,11 @@ button {
   display: inline;
   margin-left: -50px;
 }
+
 .nav-options a {
   color: black;
 }
+
 a.ac {
   background-color: blue;
   color: beige;
@@ -71,6 +88,7 @@ a:hover {
   /* padding: 19px; */
   /* color: aliceblue; */
 }
+
 button {
   float: right;
 }
@@ -281,6 +299,7 @@ img {
 
   position: relative;
 }
+
 .cart {
   position: relative;
   top: 15px;
@@ -308,6 +327,7 @@ img {
   text-align: center;
   padding-top: 20px;
 }
+
 .view {
   background-color: black;
   width: 400px;
@@ -327,6 +347,7 @@ img {
   height: 1800px;
   background-color: white;
 }
+
 .iii:hover {
   display: inline-block;
   transform: scale(1.1, 1.1);
@@ -338,9 +359,11 @@ img {
   display: flex;
   justify-content: space-around;
 }
+
 .blaa {
   color: aliceblue;
 }
+
 .blaa:hover {
   color: aqua;
 }
@@ -391,27 +414,33 @@ img {
   color: aliceblue;
   background-color: black;
 }
+
 .footer-secondary {
   width: 40%;
   display: flex;
 }
+
 .address {
   width: 50%;
   /* padding-left: 10px; */
   /* background-color: rgb(182, 182, 194); */
 }
+
 .imgl {
   width: 200px;
   background: white;
 }
+
 .menu {
   width: 50%;
   /* background-color: rgb(119, 119, 122); */
 }
+
 .account {
   width: 20%;
   /* background-color: blue; */
 }
+
 .footer1 {
   width: 100%;
   height: 50px;
@@ -419,24 +448,30 @@ img {
   text-align: center;
   padding-top: 14px;
 }
+
 .menu1 a {
   color: white;
 }
+
 .acc1 a {
   color: white;
 }
+
 .acc1 a:hover {
   color: white;
 }
+
 @media only screen and (max-width: 600px) {
   .footer {
     flex-direction: column-reverse;
   }
+
   .footer-secondary,
   .address {
     width: 100%;
     margin-bottom: 20px;
   }
+
   .footer-secondary {
     margin-bottom: 40px;
   }
