--- a/Css/style.css
+++ b/Css/style.css
@@ -93,17 +93,15 @@ button {
   float: right;
 }
 
-.inp{
-    padding: 3px 40px;
-    border: 2px solid rgb(215, 233, 250);
-    width: 300px;
-    height: 35px;
-    font-size:small;
-    border-radius: 20px;
-    background-color: transparent;
-    box-shadow: 2px 3px;
-    box-shadow: 7px 7px 7px grey;
-    margin-right:-4px;
+.inp {
+  padding: 3px 40px;
+  border-radius: 5px;
+  border: none;
+  width: 350px;
+  height: 30px;
+  box-shadow: 2px 3px;
+  box-shadow: 7px 7px 7px grey;
+  border-radius: 5px;
 }
 
 .pic {
@@ -140,65 +138,46 @@ marquee {
   position: fixed;
 }
 
-.mot {
-  background-color: rgb(242, 14, 14);
-  width: 120px;
-  height: 5px;
-  margin-left: 750px;
-}
-
-.why {
-  background-color: lightgrey;
-  width: 100%;
-  height: 180px;
-  /* display: inline-flex; */
-  padding: 10px;
-  margin-bottom: 15px;
-}
-
-.free {
-  background-color: rgb(13, 32, 89);
-  width: 200px;
-  height: 150px;
-  color: aliceblue;
-  border-bottom-left-radius: 12px;
-  border-top-right-radius: 12px;
-  padding-left: 8px;
-  position: relative;
-  bottom: 60px;
-  box-shadow: 10px 10px 10px red;
-}
-
-.Fast {
-  background-color: rgb(18, 37, 88);
-  width: 200px;
-  height: 150px;
-  color: aliceblue;
-  border-bottom-left-radius: 12px;
-  border-top-right-radius: 12px;
-  padding-left: 8px;
-  position: relative;
-  bottom: 60px;
-  box-shadow: 10px 10px 10px red;
-}
-
-.Best {
-  background-color: rgb(22, 39, 93);
-  width: 200px;
-  height: 150px;
-  position: relative;
-  bottom: 60px;
-  color: aliceblue;
-  border-bottom-left-radius: 12px;
-  border-top-right-radius: 12px;
-  padding-left: 8px;
-  box-shadow: 10px 10px 10px red;
-}
-
-.psd {
-  margin-left: 250px;
+.shop-with-us{
   display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 3em;
 }
+.red{
+  color: red;
+}
+.why {
+ /* background-color: lightgrey;*/
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  justify-content: space-between;
+
+
+}
+
+.icons{
+  display: flex;
+  justify-content: space-around ;
+  align-items: center;
+  font-size: 5em;
+  color: #FF5E59;
+}
+
+.tags{
+  display: flex;
+  justify-content: space-around;
+  font-size: 2rem;
+  font-weight: 400;
+  margin-bottom: 3rem;
+  color: black;
+
+}
+
+
+
 
 .boy {
   position: relative;
@@ -236,30 +215,38 @@ marquee {
   margin-left: 675px;
 }
 
+.products{
+  width: 100vw;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 3rem;
+}
+
 .main {
   height: 550px;
-  background-color: rgb(240, 228, 228);
+ /* background-color: rgb(240, 228, 228);*/
+  background-color: whitesmoke;
   width: 400px;
-  /* border: solid; */
   margin: 50px;
   padding-left: 55px;
   float: left;
-  box-shadow: 4px 5px 10px 15px rgb(231, 207, 207);
+  /*border: 2px solid grey;*/
+  /*box-shadow: 4px 5px 10px 15px rgb(231, 207, 207);*/
 }
 
 .x {
   height: 400px;
   width: 350px;
-  /* border: solid; */
+  /*border: solid; */
+  object-fit: cover;
   margin: 50px 50px;
   float: left;
-  position: relative;
   bottom: 50px;
   right: 50px;
 }
 
-x,
-img {
+
+.x , img {
   text-align: center;
   position: relative;
   /*width: 300px*/
@@ -297,8 +284,8 @@ img {
   font-size: 20px;
   border: none;
   width: 300px;
-  background-color: aqua;
-
+  /*background-color: aqua;*/
+  background-color: lightblue;
   position: relative;
 }
 
@@ -314,8 +301,7 @@ img {
   font-size: 20px;
   border: none;
   width: 300px;
-  background-color: aqua;
-
+  background-color: lightblue;
   position: relative;
 }
 
