--- a/Css/product.css
+++ b/Css/product.css
@@ -111,7 +111,7 @@ li {
 }
 
 .div1{
-    width: 22%;
+    width: 18%;
     height: 1530px;
     /* background-color: lightblue; */
     
@@ -189,7 +189,7 @@ li {
 .box1{
     /* background-color: lightgray; */
     height: 530px;
-    width: 330px;
+    width: 301px;
     float: left;
     margin-left: 20px;
 }
@@ -246,7 +246,8 @@ color: red;
 
 }
 .bn{
-    background-color: red;
+    background-color: aliceblue;
+    border: 1px solid black;
     font-size: 16px;
     font-weight: bold;
     padding: 13px;
