--- a/Css/style.css
+++ b/Css/style.css
@@ -1,53 +1,33 @@
-
-
-
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
-html ,body{
+html, body {
   padding: 0;
   margin: 0;
 }
 
-
 #myBtn {
   display: none;
-  /* Hidden by default */
   position: fixed;
-  /* Fixed/sticky position */
   bottom: 20px;
-  /* Place the button at the bottom of the page */
   right: 30px;
-  /* Place the button 30px from the right */
   z-index: 99;
-  /* Make sure it does not overlap */
   border: none;
-  /* Remove borders */
   outline: none;
-  /* Remove outline */
   background-color: red;
-  /* Set a background color */
   color: white;
-  /* Text color */
   cursor: pointer;
-  /* Add a mouse pointer on hover */
   padding: 15px;
-  /* Some padding */
   border-radius: 10px;
-  /* Rounded corners */
   font-size: 18px;
-  /* Increase font size */
 }
-
 
 #myBtn:hover {
   background-color: #555;
-  /* Add a dark-grey background on hover */
 }
-
 
 .nav {
   background-color: rgb(255, 255, 255);
@@ -62,53 +42,81 @@ html ,body{
   box-shadow: 3.5px 3px 16px -2px #e8e7e7;
 }
 
-
 a {
   text-decoration: none;
   color: rgb(234, 37, 37);
-  /* padding: 18px ; */
 }
 
-
-
-ul,
-li {
+ul, li {
   display: inline;
   padding: 25px;
 }
 
-
 button {
-  float: right;
+  display: none;
+  background: transparent;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  padding: 5px;
+  margin: 10px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
+button i {
+  display: block;
+  width: 30px;
+  height: 4px;
+  background-color: #000;
+  margin: 5px 0;
+  border-radius: 3px;
+}
 
 nav {
-  /* display: inline; */
   margin-left: auto;
-  margin-right:0%;
+  margin-right: 0%;
   padding: 0%;
-  /* margin-left: -50px; */
 }
-nav li input{
-  outline-width:0px;
+
+nav li input {
+  outline-width: 0px;
   border: none;
   background-color: transparent;
 }
-nav li:last-child{
+
+nav li:last-child {
   background-color: #b6b3b346;
   border-radius: 50px;
   padding: 1rem;
 }
-nav li input::placeholder{
+
+nav li input::placeholder {
   font-size: 1.1em;
 }
-
 
 nav a {
   color: black;
   margin-right: 0%;
   margin-left: auto;
+}
+
+@media screen and (max-width: 768px) {
+  button {
+    display: block;
+  }
+  nav {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    background: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 5px;
+  }
 }
 
 
