--- a/Css/style.css
+++ b/Css/style.css
@@ -11,6 +11,7 @@ html, body {
   padding: 0;
   margin: 0;
   font-family: Poppins;
+  overflow-x: hidden;
 }
 
 #myBtn {
@@ -173,14 +174,6 @@ a.ac {
 }
 
 
-a:hover {
-  /* background-color: blue; */
-  color: red;
-  font-weight: bold;
-  /* padding: 19px; */
-  /* color: aliceblue; */
-}
-
 
 button {
   float: right;
@@ -211,16 +204,95 @@ button {
 }
 
 
-.shop {
-  width: 110px;
-  height: 40px;
-  background-color: aqua;
-  color: aliceblue;
-  text-align: center;
-  margin-top: 2px;
-  font-size: 20px;
-  border-radius: 15px;
+.wrapper {
+  display: flex;
+  justify-content: center;
+  margin-right: 20%;
 }
+
+.cta {
+    display: flex;
+    padding: 5px 25px;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 900;
+    font-size: 40px;
+    color: white;
+    background: #ff2e69;
+    box-shadow: 6px 6px 0 black;
+    transform: skewX(-15deg);
+}
+
+.cta:focus {
+   outline: none; 
+}
+
+.cta:hover {
+    transition: 0.5s;
+    box-shadow: 10px 10px 0 #FBC638;
+}
+
+.cta span:nth-child(2) {
+    transition: 0.5s;
+    margin-right: 0px;
+}
+
+.cta:hover  span:nth-child(2) {
+    transition: 0.5s;
+    margin-right: 45px;
+}
+
+  span {
+    transform: skewX(15deg) 
+  }
+
+  span:nth-child(2) {
+    width: 20px;
+    margin-left: 30px;
+    position: relative;
+    top: 12%;
+  }
+  
+/**************SVG****************/
+
+path.one {
+    transition: 0.4s;
+    transform: translateX(-60%);
+}
+
+path.two {
+    transition: 0.5s;
+    transform: translateX(-30%);
+}
+
+.cta:hover path.three {
+    animation: color_anim 1s infinite 0.2s;
+}
+
+.cta:hover path.one {
+    transform: translateX(0%);
+    animation: color_anim 1s infinite 0.6s;
+}
+
+.cta:hover path.two {
+    transform: translateX(0%);
+    animation: color_anim 1s infinite 0.4s;
+}
+
+/* SVG animations */
+
+@keyframes color_anim {
+    0% {
+        fill: white;
+    }
+    50% {
+        fill: #FBC638;
+    }
+    100% {
+        fill: white;
+    }
+}
+
 
 
 .ale {
