--- a/Css/product.css
+++ b/Css/product.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Poppins&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap'); */
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    font-family: Poppins;
 }
 #myBtn {
     display: none; /* Hidden by default */
@@ -25,11 +30,13 @@
   }
 .nav {
     background-color:aliceblue;
-    padding: 15px 12px;
+    padding: 25px 12px;
     position: sticky;
      top: 0%; 
      z-index: 999;
-     box-shadow: 0px 4px 6px rgb(0, 0, 0.1); 
+     border-bottom: 2px dotted rgb(255, 71, 71);
+     font-family: Poppins;
+     font-weight: 500;
  } 
  a{
    text-decoration: none; 
